fixed updates list and some alignment issues + added image

--- a/src/less/style-base.less
+++ b/src/less/style-base.less
@@ -52,6 +52,13 @@ body {
     padding: 14px 30px;
     margin-bottom: 10px;
     
+    img{
+      float: right;
+      height: auto;
+      width: 110px;
+      margin-left: 10px;
+    }
+    
     p{
       //margin: 23px 0 0;
     }
@@ -68,7 +75,7 @@ body {
   
   .row-fluid {
     max-width: 1230px;
-    margin: 0 14px;
+    margin: 0 30px 10px;
   }
   
   h1,h2,h3{color: #fff;}
@@ -104,7 +111,7 @@ body {
     
   .btn-group{
     //width: 350px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     .btn-inverse{
       .buttonBackground(@herotone, darken(#393e46, 10%));
       color: #FFFFFF;
@@ -139,6 +146,11 @@ body {
     -moz-transition: background-color 3s;
 }
 
+.content{
+  margin: 0 10px 0 0;
+  padding-left: 0;
+}
+
 /**** Header ****/
 
 #search{
@@ -161,7 +173,7 @@ body {
   button{
     border: 0 none;
     width: 20px; height: 20px;
-    margin: -36px 0 0 5px;
+    margin: -36px 0 0 6px;
     overflow: hidden;
     text-indent: -2000%;
     float: left;
@@ -295,6 +307,11 @@ body {
 }
 
 footer{
+  clear: both;
+  margin: 20px auto;
+  text-align: center;
+  padding-top: 20px;
+  
   a img{
     height: 20px;
     margin-bottom: -5px;
