--- a/src/less/style-overview.less
+++ b/src/less/style-overview.less
@@ -249,11 +249,6 @@
     }
   }
   
-  .tooltip{
-    background: @herotone;
-    font-size: 15px;
-  }
-  
   .status{
     
     border:1px solid @lighttext;
